--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>app</title>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -17,6 +18,7 @@
         </div>
       </div>
       <img src="../img/card.png" alt="card">
+      <div class="clear-fix"></div>
     </main>
     <div class="list">
       <div class="wrapper">
@@ -229,7 +231,7 @@
     <footer>
       <div class="wrapper">
         <h2>Want to try ?</h2>
-        <a href="#" class="button white">I am interested</a>
+        <a href="#" class="button white square">I am interested</a>
       </div>
     </footer>
     <script src="./bandle.js"></script>
