--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
     <main>
       <div class="wrapper">
         <div class="info">
-          <a href="#" class="button white">Boost your ads</a>
+          <a href="#" aria-label="Boost your ads" class="button white">Boost your ads</a>
           <h1>Discover advertising with App</h1>
           <h2>
             Want to accelerate Artur's benefits? Artur's advertising option allows you to benefit from Google and Facebook technologies, managed by experts, in order to win new customers
           </h2>
-          <a href="#" class="button blue">Contact my coach</a>
+          <a href="#" aria-label="Contact my coach" class="button blue">Contact my coach</a>
         </div>
       </div>
       <img src="../img/card.png" alt="card">
@@ -84,7 +84,7 @@
                   at your service</h3>
                   <p>A certified Google and Facebook Ads team takes <br>
                     care of everything</p>
-                  <a href="#" class="button blue">Learn more</a>
+                  <a href="#" aria-label="Learn more" class="button blue">Learn more</a>
               </div>
               <div class="img do-fl-center  yellow">
                 <svg xmlns="http://www.w3.org/2000/svg" width="209" height="189" viewBox="0 0 209 189" fill="none" style="&#10;">
@@ -104,7 +104,7 @@
                    advertising</h3>
                   <p>Texts, visuals and audiences <br>
                     according to your needs</p>
-                  <a href="#" class="button blue">Learn more</a>
+                  <a href="#" aria-label="Learn more" class="button blue">Learn more</a>
               </div>
               <div class="img do-fl-center  blue">
                 <svg xmlns="http://www.w3.org/2000/svg" width="141" height="246" viewBox="0 0 141 246" fill="none">
@@ -137,7 +137,7 @@
                   optimized daily</h3>
                   <p>Thanks to Artur, your advertising campaigns <br>
                     are perfected in order to obtain best results</p>
-                  <a href="#" class="button blue">Learn more</a>
+                  <a href="#" aria-label="Learn more" class="button blue">Learn more</a>
               </div>
               <div class="img do-fl-center  green">
                 <svg xmlns="http://www.w3.org/2000/svg" width="219" height="179" viewBox="0 0 219 179" fill="none">
@@ -189,7 +189,7 @@
                   to your needs</h3>
                   <p>An amount defined by you, <br>
                     according to your ambitions</p>
-                  <a href="#" class="button blue">Learn more</a>
+                  <a href="#" aria-label="Learn more" class="button blue">Learn more</a>
               </div>
               <div class="img do-fl-center violet">
                 <svg xmlns="http://www.w3.org/2000/svg" width="180" height="168" viewBox="0 0 180 168" fill="none">
@@ -231,7 +231,7 @@
     <footer>
       <div class="wrapper">
         <h2>Want to try ?</h2>
-        <a href="#" class="button white square">I am interested</a>
+        <a href="#" aria-label="I am interested" class="button white square">I am interested</a>
       </div>
     </footer>
     <script src="./bandle.js"></script>
