--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>app</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.min.css">
   </head>
   <body>
     <main>
@@ -17,7 +17,7 @@
           <a href="#" aria-label="Contact my coach" class="button blue">Contact my coach</a>
         </div>
       </div>
-      <img src="../img/card.png" alt="card">
+      <img src="./img/card.png" alt="card">
       <div class="clear-fix"></div>
     </main>
     <div class="list">
